--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,3 +10,5 @@ License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.0
+URL: https://github.com/MohsenSoltanifar/descfarspkg
+BugReports: https://github.com/MohsenSoltanifar/descfarspkg/issues
